Added examples and requirements to README
Signed-off-by: Andrew Miller <amiller@dappervision.com>

--- a/README
+++ b/README
@@ -4,6 +4,11 @@ License: AGPL V3
 
 Wraps the Zebra-Crossing library (zxing/cpp). Works with numpy arrays or PIL Images.
 
+Requirements:
+    numpy
+    PIL (optional)
+    Cython (optional)
+
 Example 1:
     url = 'http://i.imgur.com/N5ill.jpg'  # Use a web search for more qrcode photos
     img = Image.open(StringIO.StringIO(urllib2.urlopen(url).read()))
